# AegisHub

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  PENTESTHUB-ARQUITETURA.md  README.md  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: manage.py  pyproject.toml
apps/api/accounts/: admin.py  crypto.py  email.py  models.py  services.py  tasks.py
apps/api/accounts/migrations/: 0001_initial.py  0002_postgres_setup.py  0003_email_confirmation.py
apps/api/api/: exceptions.py  serializers.py  urls.py  views.py
apps/api/applications/: admin.py  models.py  services.py
apps/api/applications/migrations/: 0001_initial.py  0002_rls.py
apps/api/audit/: admin.py  context.py  middleware.py  models.py  services.py
apps/api/audit/migrations/: 0001_initial.py  0002_append_only_chain.py
apps/api/favorites/: admin.py  models.py  services.py
apps/api/favorites/migrations/: 0001_initial.py  0002_rename_favorites_f_user_id_e1edd9_idx_favorites_f_user_id_ec7f89_idx.py
apps/api/fixtures/: certifications.json  specialties.json
apps/api/infra/: kms.py  storage.py
apps/api/pentesters/: admin.py  apps.py  models.py  services.py
apps/api/pentesthub/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
apps/api/proposals/: admin.py  models.py  services.py
apps/api/tenants/: admin.py  context.py  middleware.py  models.py  services.py
apps/api/tests/: conftest.py  test_admin_endpoints.py  test_db_hardening.py  test_password_reset.py  test_register_flow.py  test_throttle.py
docs/: DEPLOY.md  (+1 more)
(+86 files in other folders)
