[project]
name = "pentesthub-api"
version = "0.1.0"
description = "PentestHub Django API"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
    "celery>=5.4",
    "redis>=5.0",
    "django-redis>=5.4",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "boto3>=1.35",
    "cryptography>=43.0",
    "python-dotenv>=1.0",
    "gunicorn>=22.0",
    "pillow>=10.4",
    "django-axes>=6.5",
    "whitenoise>=6.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.15",
    "bandit>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM", "TCH"]
ignore = ["S101"]
per-file-ignores = { "**/tests/**" = ["S105", "S106"] }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pentesthub.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers"
